// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can render 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  max-width: 100%;
  text-align: left;
}

<button
  class="typography-linkReset-1 typography-chevron-link-2"
  data-id="chevron-button"
>
  <div
    class="c0"
    style="margin-left: -8px; margin-top: 0px; margin-bottom: 0px; height: 24px;"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-3"
      data-id="IconChevronRight"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span
    class="typography-body-variant-basekick-13 typography-neutral-color-14 typography-regular-weight-15 typography-strong-support-16 -span c1"
    data-id="text"
  >
    Chevron link
  </span>
</button>
`;

exports[`It can render another tone 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  max-width: 100%;
  text-align: left;
}

<button
  class="typography-linkReset-18 typography-chevron-link-19"
  data-id="chevron-button"
>
  <div
    class="c0"
    style="margin-left: -8px; margin-top: 0px; margin-bottom: 0px; height: 24px;"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-20"
      data-id="IconChevronRight"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span
    class="typography-body-variant-basekick-30 typography-neutral-color-31 typography-regular-weight-32 typography-strong-support-33 -span c1"
    data-id="text"
  >
    Chevron button
  </span>
</button>
`;
